create all pages

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
-POSTGRES_URL="postgresql://postgres.jikytpgzkbfxmedrwclz:u3oLbntLywEO8FqX@aws-0-sa-east-1.pooler.supabase.com:6543/postgres"
-POSTGRES_PRISMA_URL="postgresql://postgres.jikytpgzkbfxmedrwclz:u3oLbntLywEO8FqX@aws-0-sa-east-1.pooler.supabase.com:6543/postgres"
+# Connect to Supabase via connection pooling with Supavisor.
+DATABASE_URL="postgresql://postgres.kbdnentxjmtddhnrbvsd:X0dExi89JlfN1Zaq@aws-0-sa-east-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
 
+# Direct connection to the database. Used for migrations.
+DIRECT_URL="postgresql://postgres.kbdnentxjmtddhnrbvsd:X0dExi89JlfN1Zaq@aws-0-sa-east-1.pooler.supabase.com:5432/postgres"
+        
