--- a/.env
+++ b/.env
@@ -3,4 +3,7 @@ DATABASE_URL="postgresql://postgres.kbdnentxjmtddhnrbvsd:X0dExi89JlfN1Zaq@aws-0-
 
 # Direct connection to the database. Used for migrations.
 DIRECT_URL="postgresql://postgres.kbdnentxjmtddhnrbvsd:X0dExi89JlfN1Zaq@aws-0-sa-east-1.pooler.supabase.com:5432/postgres"
+
+
+AUTH_SECRET="dsfSF"
         
