--- a/package.json
+++ b/package.json
@@ -21,16 +21,23 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-table": "^8.19.2",
+    "@types/bcryptjs": "^2.4.6",
     "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
+    "dayjs": "^1.11.11",
+    "dayjs-plugin-utc": "^0.1.2",
     "lucide-react": "^0.399.0",
     "next": "14.2.4",
+    "next-auth": "^5.0.0-beta.4",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
