--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.16.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.1",
     "@radix-ui/react-popover": "^1.1.1",
@@ -30,9 +31,9 @@
     "date-fns-tz": "^3.1.3",
     "dayjs": "^1.11.11",
     "dayjs-plugin-utc": "^0.1.2",
+    "jose": "^5.1.3",
     "lucide-react": "^0.399.0",
     "next": "14.2.4",
-    "next-auth": "^5.0.0-beta.4",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
