--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-day-picker": "^8.10.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "swr": "^2.2.5",
