--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tanstack/react-table": "^8.19.2",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/react-csv": "^1.1.10",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -41,6 +42,7 @@
     "lucide-react": "^0.399.0",
     "next": "14.2.4",
     "react": "^18",
+    "react-csv": "^2.2.2",
     "react-day-picker": "^8.10.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
